demo_kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-testing
  labels:
    app.kubernetes.io/name: my-app-testing
    app.kubernetes.io/instance: my-app-testing
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: my-app-testing
    app.kubernetes.io/instance: my-app-testing
